<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:textSize="28sp"
        android:gravity="center_vertical"
        android:layout_marginStart="51dp"
        android:layout_marginTop="17dp"
        android:textColor="#7F9E9E9E"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="36sp"
        android:textColor="#FF9E9E9E"
        android:layout_marginStart="51dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="54dp"
        android:layout_marginTop="10dp">
        <com.swu.smartcanteen.widget.ClearInputTextView
            android:id="@+id/s_num"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="学号："
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:maxLength="15"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/snum_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_num_error_tip"
        android:layout_marginStart="49dp"
        android:textColor="#FFFF0000"
        android:textSize="14sp"
        android:layout_marginBottom="2dp"
        android:visibility="invisible"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="54dp"
        android:layout_marginTop="10dp">
        <com.swu.smartcanteen.widget.ClearInputTextView
            android:id="@+id/tell_num"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="手机号："
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:maxLength="13"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tel_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tel_error_tip"
        android:layout_marginStart="49dp"
        android:textColor="#FFFF0000"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:visibility="invisible"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="54dp"
        android:layout_marginTop="10dp">
        <com.swu.smartcanteen.widget.VerifyCodeInputTextView
            android:id="@+id/verify_code"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="手机验证码"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textSize="18sp"
            android:gravity="center_vertical"
            app:verifyMode="true"
            android:maxLength="6"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/verify_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_code_error_tip"
        android:layout_marginStart="49dp"
        android:textColor="#FFFF0000"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:visibility="invisible"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="54dp"
        android:layout_marginTop="10dp">
        <com.swu.smartcanteen.widget.ClearInputTextView
            android:id="@+id/first_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="输入密码："
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:maxLength="15"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="54dp"
        android:layout_marginTop="15dp">
        <com.swu.smartcanteen.widget.ClearInputTextView
            android:id="@+id/second_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="确认密码："
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:maxLength="15"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/twice_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:text="@string/twice_disagree_tip"
        android:textColor="#FFFF0000"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/finish_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/finish_register"
        android:textColor="@drawable/register_btn_text_selector"
        android:background="@drawable/register_btn_selector"
        android:enabled="true"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="54dp"/>


</LinearLayout>